--- a/app/views/taxbills/_form.html.erb
+++ b/app/views/taxbills/_form.html.erb
@@ -7,7 +7,7 @@
 
 <h2><%= t("common.title.#{form_type}") %></h2>
 
-<%= form_for taxbill do |f| %>
+<%= form_for taxbill, html: {multipart: true} do |f| %>
    <%= f.error_messages %>
   <div class="box">
     <p>
@@ -22,6 +22,7 @@
       <%= f.label :taxman_id %>
       <%= f.select :taxman_id, options_for_select(Taxbill.taxmen_list, taxbill.taxman_id) %>
     </p>
+    <%= render 'shared/attachments/form', label: t('business_clients.edit.picture') %>
     <p>
       <%= f.submit %>
     </p>
