--- a/app/views/taxbills/_form.html.erb
+++ b/app/views/taxbills/_form.html.erb
@@ -22,7 +22,7 @@
       <%= f.label :taxman_id %>
       <%= f.select :taxman_id, options_for_select(Taxbill.taxmen_list, taxbill.taxman_id) %>
     </p>
-    <%= render 'shared/attachments/form', label: t('business_clients.edit.picture') %>
+    <%= render 'shared/attachments/form', label: t("taxbills.#{form_type}.picture") %>
     <p>
       <%= f.submit %>
     </p>
