--- a/app/views/taxbills/show.html.erb
+++ b/app/views/taxbills/show.html.erb
@@ -6,7 +6,7 @@
   <%= link_to t('common.title.list'), :taxbills %>
 </div>
 
-<h2><%=h "거래처명" %></h2>
+<h2><%= user.name %></h2>
   <div class="box">
     <div id="descr">
       <table border="0" cellspacing="5" cellpadding="5">
