--- a/app/views/payments/show.html.erb
+++ b/app/views/payments/show.html.erb
@@ -1,37 +1,73 @@
 <% @title = t('.title') %>
 
+<h2><%=h "연봉 이력" %></h2>
 <div id="show_command">
   <%= link_to t('common.title.new'), [:new, user, :annual_pay_schedule] %>
   |
   <%= link_to t('common.title.list'), :payments %>
 </div>
-
-<h2><%=h "연봉 이력" %></h2>
-  <div class="box">
-    <div id="descr">
-      <table border="0" cellspacing="5" cellpadding="5">
-        <% unless user.annual_pay_schedules.empty? %>
+<div class="box">
+  <div id="descr">
+    <table border="0" cellspacing="5" cellpadding="5">
+      <% unless user.annual_pay_schedules.empty? %>
+        <tr>
+          <th>시작일</th>
+          <th>총 연봉 금액</th>
+          <% (1..12).each do |month| %>
+            <th><%= month %>월</th>
+          <% end %>
+          <th>기본급</th>
+          <th>메뉴</th>
+        </tr>
+        <% user.annual_pay_schedules.each do |schedule| %>
           <tr>
-            <th>시작일</th>
-            <th>총 연봉 금액</th>
+            <td><%= schedule.started_at %></td>
+            <td><%= number_to_currency schedule.income %></td>
             <% (1..12).each do |month| %>
-              <th><%= month %>월</th>
+              <td><%= number_to_percentage(schedule.send(Date::MONTHNAMES[month]), precision: 0)%></td>
             <% end %>
-            <th>기본급</th>
+            <td><%= number_to_currency schedule.basic_pay %>
+            <td>
+              <%= link_to t("common.link.edit"), [:edit, user, schedule] %>
+              |
+              <%= link_to t("common.link.destroy"), [user, schedule], :method => :delete, :confirm => "Are you sure?" %>
+            </td>
+          </td>
+        <% end %>
+      <% else %>
+        <tr>
+          <td>항목이 없습니다.</td>
+        </tr>
+      <% end %>
+    </table>
+  </div>
+</div>
+<div style="clear: both;"></div>
+<h2>상여금</h2>
+<div id="show_command">
+  <%= link_to t('common.title.new'), [:new, user, :bonus] %>
+  |
+  <%= link_to t('common.title.list'), :payments %>
+</div>
+<div class="box">
+   <div id="descr">
+     <table border="0" cellspacing="5" cellpadding="5">
+        <% unless user.bonuses.empty? %>
+          <tr>
+            <th>지급일</th>
+            <th>금액</th>
+            <th>내역</th>
             <th>메뉴</th>
           </tr>
-          <% user.annual_pay_schedules.each do |schedule| %>
+          <% user.bonuses.each do |bonus| %>
             <tr>
-              <td><%= schedule.started_at %></td>
-              <td><%= number_to_currency schedule.income %></td>
-              <% (1..12).each do |month| %>
-                <td><%= number_to_percentage(schedule.send(Date::MONTHNAMES[month]), precision: 0)%></td>
-              <% end %>
-              <td><%= number_to_currency schedule.basic_pay %>
+              <td><%= bonus.given_at %></td>
+              <td><%= number_to_currency bonus.amount %></td>
+              <td><%= bonus.note %>
               <td>
-                <%= link_to t("common.link.edit"), [:edit, user, schedule] %>
+                <%= link_to t("common.link.edit"), [:edit, user, bonus] %>
                 |
-                <%= link_to t("common.link.destroy"), [user, schedule], :method => :delete, :confirm => "Are you sure?" %>
+                <%= link_to t("common.link.destroy"), [user, bonus], :method => :delete, :confirm => "Are you sure?" %>
               </td>
             </td>
           <% end %>
@@ -40,7 +76,6 @@
             <td>항목이 없습니다.</td>
           </tr>
         <% end %>
-      </table>
-    </div>
-  </div>
+    </table>
+   </div>
 </div>
