--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -13,7 +13,7 @@
           <%= link_to t("users.index.title"), :controller => "users" %>
         </li>
       <% end %>
-      <%= link_to t("payments.index.title"), :payments %>
+      <li><%= link_to t("payments.index.title"), :payments %></li>
       <li class="sublast">#</li>
     </ul>
   </li>
