--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -1,4 +1,4 @@
-<%   @title = t('.title') %>
+<% @title = t('.title') %>
 
 <% content_for :search do -%>
 <%= form_tag :payments, :method => :get do %>
@@ -7,7 +7,7 @@
 <% end -%>
 
 <div id="show_command">
-  <%= link_to t('namecards.new.title'), new_payment_path %>
+  <%= link_to t('common.title.back'), :root %>
 </div>
 
 <h2><%= t('common.title.list') %></h2>
@@ -15,14 +15,15 @@
   <tr>
     <th><%= User.human_attribute_name("name") %></th>
   </tr>
-<% users.each do |user| %>
-  <tr class="selectable" onclick="location.href='<%= payment_path(user) %>'">
-    <td><%=h user.name %></td>
-  </tr>
-<% end %>
+  <% users.each do |user| %>
+    <tr class="selectable" onclick="location.href='<%= payment_path(user) %>'">
+      <td><%=h user.name %></td>
+    </tr>
+  <% end %>
 </table>
 
 <br />
+
 <center>
   <%= will_paginate users %>
 </center>
