--- a/app/views/payments/show.html.erb
+++ b/app/views/payments/show.html.erb
@@ -1,6 +1,6 @@
 <% @title = t('.title') %>
 
-<h2><%=h "연봉 이력" %></h2>
+<h2>기본급</h2>
 <div id="show_command">
   <% if @user.ingroup?(:admin) %>
     <%= link_to t('common.title.new'), [:new, user, :pay_schedule] %>
@@ -8,31 +8,32 @@
   <% end %>
   <%= link_to t('common.title.list'), :payments %>
 </div>
+
 <div class="box">
-  <div id="descr">
-    <table border="0" cellspacing="5" cellpadding="5">
+  <div>
+    <table width="1000" border="0" cellspacing="5" cellpadding="5">
       <% unless user.pay_schedules.empty? %>
         <tr>
-          <th>시작일</th>
-          <th>총 연봉 금액</th>
+          <th><%= PaySchedule.human_attribute_name(:started_at) %></th>
+          <th><%= PaySchedule.human_attribute_name(:income) %></th>
           <% (1..12).each do |month| %>
-            <th><%= month %>월</th>
+            <th><%= t('date.month_names')[month] %></th>
           <% end %>
-          <th>기본급</th>
+          <th><%= PaySchedule.human_attribute_name(:basic_pay) %></th>
           <% if @user.ingroup?(:admin) %>
-            <th>메뉴</th>
+            <th><%= t('common.menu')%> </th>
           <% end %>
         </tr>
         <% user.pay_schedules.each do |schedule| %>
           <tr>
-            <td><%= schedule.started_at %></td>
-            <td><%= number_to_currency schedule.income %></td>
+            <td align="right"><%= schedule.started_at %></td>
+            <td align="right"><%= number_to_currency schedule.income %></td>
             <% (1..12).each do |month| %>
-              <td><%= number_to_percentage(schedule.send(Date::MONTHNAMES[month]), precision: 0)%></td>
+              <td align="right"><%= number_to_percentage(schedule.send(Date::MONTHNAMES[month]), precision: 0)%></td>
             <% end %>
-            <td><%= number_to_currency schedule.basic_pay %>
+            <td align="right"><%= number_to_currency schedule.basic_pay %>
             <% if @user.ingroup?(:admin) %>
-              <td>
+              <td align="right">
                 <%= link_to t("common.link.edit"), [:edit, user, schedule] %>
                 |
                 <%= link_to t("common.link.destroy"), [user, schedule], :method => :delete, :confirm => "Are you sure?" %>
@@ -58,15 +59,15 @@
   <%= link_to t('common.title.list'), :payments %>
 </div>
 <div class="box">
-   <div id="descr">
+   <div>
      <table border="0" cellspacing="5" cellpadding="5">
         <% unless user.bonuses.empty? %>
           <tr>
-            <th>지급일</th>
-            <th>금액</th>
-            <th>내역</th>
+            <th><%= Bonus.human_attribute_name(:gave_at) %></th>
+            <th><%= Bonus.human_attribute_name(:amount) %></th>
+            <th><%= Bonus.human_attribute_name(:note) %></th>
             <% if @user.ingroup?(:admin) %>
-              <th>메뉴</th>
+              <th><%= t('common.menu')%> </th>
             <% end %>
           </tr>
           <% user.bonuses.each do |bonus| %>
