--- a/app/views/bonuses/_form.html.erb
+++ b/app/views/bonuses/_form.html.erb
@@ -11,7 +11,7 @@
    <%= f.error_messages %>
   <div class="box">
     <p>
-      <%= f.label :given_at %>
+      <%= f.label :gave_at %>
       <%= f.date_select :given_at, :order => [:year, :month, :day] %>
     </p>
     <p>
