--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -256,6 +256,11 @@ div.flash.notice {
   color: #669;
 }
 
+.numrow
+{
+	text-align: right;
+}
+
 .tabular label {
   float: left;
   font-weight: bold;
