--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -14,6 +14,7 @@
         </li>
       <% end %>
       <li><%= link_to t("payments.index.title"), :payments %></li>
+      <li><%= link_to t("commutes.index.title"), :commutes %></li>
       <li class="sublast">#</li>
     </ul>
   </li>
