--- a/app/views/commutes/_form.html.slim
+++ b/app/views/commutes/_form.html.slim
@@ -6,7 +6,7 @@
 
 h2= t("common.title.#{form_type}")
 
-= form_for [user, commute] do |f|
+= form_for [user, commute], html: {multipart: true} do |f|
   = f.error_messages
   .box
     - if go
@@ -17,5 +17,7 @@ h2= t("common.title.#{form_type}")
       p
         = f.label :leave
         = f.datetime_select :leave, :order => [:year, :month, :day, :hour, :minute], default: DateTime.now
+    p
+      = render 'shared/attachments/form', label: t("commutes.#{form_type}.picture")
     p
       = f.submit
