--- a/app/views/commutes/show.html.slim
+++ b/app/views/commutes/show.html.slim
@@ -23,7 +23,9 @@ h2 출퇴근 기록
               = link_to "퇴근 입력하기", [:leave, user, commute]
             - else
               = commute.leave.strftime("%Y-%m-%d %H-%M")
-          td width="100" align="right"
+          td width="150" align="right"
+            = link_to "상세정보", [:detail, user, commute]
+            = " | "
             = link_to "수정", [:edit, user, commute]
             = " | "
             = link_to t("common.link.destroy"), [user, commute], :method => :delete, :confirm => "Are you sure?"
