--- a/app/views/taxbills/index.html.erb
+++ b/app/views/taxbills/index.html.erb
@@ -14,15 +14,17 @@
     <h2>Total : <%= taxbill_with_pagination.count %></h2>
     <table id="list-table">
       <tr>
-        <th><%= BusinessClient.human_attribute_name('name') %></th>
         <th><%= Taxbill.human_attribute_name('transacted_at') %></th>
-        <th><%= Taxman.human_attribute_name('name') %></th>
+        <th><%= BusinessClient.human_attribute_name('name') %></th>
+        <th><%= BusinessClient.human_attribute_name('owner') %></th>
+        <th><%= Taxbill.human_attribute_name('total') %></th>
       </tr>
     <% taxbill_with_pagination.each do |taxbill| %>
       <tr class="selectable" onclick="location.href='<%= taxbill_path(taxbill) %>'">
-        <td><span><%=h taxbill.taxman.business_client.name %></span></td>
         <td><%=h taxbill.transacted_at.strftime("%Y-%m-%d") %></td>
-        <td><%=h taxbill.taxman.fullname %></td>
+        <td><span><%=h taxbill.taxman.business_client.name %></span></td>
+        <td><span><%=h taxbill.taxman.business_client.owner %></span></td>
+        <td><%=h taxbill.total %></td>
       </tr>
     <% end %>
     </table>
